--- a/0-intro.tex
+++ b/0-intro.tex
@@ -6,12 +6,16 @@
 
 \todo{Gas separation of xenon/krypton}
 
-Industrial gas separation processes is widely used to supply purified reactants and inert gases for the chemical, the health, the agricultural and the food industries. It can also be used to mitigate negative environmental impact of some industrial activities: in concrete or steel production factories, the highly problematic \ce{CO2} emissions could be separated from other atmospheric gases and captured; in nuclear treatment plants, volatile radioactive compounds (e.g., ^{85}Kr) can also be captured through an effective separation. Different small molecules are usually considered in these processes such as nitrogen, oxygen, carbon
+Industrial gas separation processes is widely used to supply purified reactants and inert gases for the chemical, the health, the agricultural and the food industries. It can also be used to mitigate negative environmental impact of some industrial activities: in concrete or steel production factories, the highly problematic \ce{CO2} emissions could be separated from other atmospheric gases and captured; in nuclear treatment plants, volatile radioactive compounds (e.g., $^{85}$Kr) can also be captured through an effective separation. Different small molecules are usually considered in these processes such as nitrogen, oxygen, carbon
 dioxide, noble gases, hydrogen, methane, or nitrous oxide. The xenon/krypton separation is usually performed on atmospheric gases,\autocite{kerry2007industrial} but other more abundant sources of noble gases can be found especially in the nuclear industry.\autocite{Banerjee_2014} 
 
 \todo{Nanoporous materials}
 
-In the current state of 
+In the current state of \todo{cryo}
+
+
+
+PSA for separation most commonly used: selectivity, working capacity, regenerability (kinetics and energy used to regenerate the material i.e., empty the pores for another cycle).\autocite{Kumar_1994}
 
 \todo{Database/screening}
 
@@ -27,9 +31,6 @@ A wider use of nanoporous materials could reduce the energy consumption of curre
 
 The number of nanoporous materials is potentially unlimited; for the metal--organic frameworks (MOFs) alone, over 90,000 structures have been synthesized~\autocite{Groom_2016} and 500,000 computationally constructed~\autocite{Wilmer_2012,Boyd_2016,Colon_2017}. To deal with this ever-increasing amount of structures, we need to design more efficient screening procedures as well as faster performance evaluation tools. To go beyond the time-consuming calculations over the whole dataset, computational chemists developed funnel-like screening procedures to reduce the need for expensive simulations and introduced machine learning (ML) models to replace them with faster evaluation tools.\autocite{Ren_2022} To further improve the selectivity screening for Xe/Kr separation, we will need to design better performing structural and energy-based descriptors.
 
-
-\todo{Xe/Kr applications in the industry}
-
 \begin{center}
     \pgfornament[width=6cm,color=CTsemi]{88}
 \end{center}
@@ -37,7 +38,7 @@ The number of nanoporous materials is potentially unlimited; for the metal--orga
 This thesis presents my work on the 
 
 
-PSA for separation most commonly used: selectivity, working capacity, regenerability (kinetics and energy used to regenerate the material i.e., empty the pores for another cycle).\autocite{Kumar_1994}
+
 
 \vfill
 \begin{center}
