--- a/0-intro.tex
+++ b/0-intro.tex
@@ -11,7 +11,8 @@ dioxide, noble gases, hydrogen, methane, or nitrous oxide. The xenon/krypton sep
 
 \todo{Nanoporous materials}
 
-In the current state of \todo{cryo}
+In the current state of the separation process
+\todo{cryo}
 
 
 
