--- a/6-perspectives.tex
+++ b/6-perspectives.tex
@@ -10,7 +10,7 @@
 
 As presented in our review of the different screening methodologies in the chapter 1, it is very common to screen for one particular metric whether it is the selectivity or the permselectivity or the capacity depending on the targeted application. Attempts of screening that searches for the most selective materials but combined with a good capacity are more and more common.\autocite{Chung_2019,Zhang_2022,Solanki_2020} If we take the problem of the selectivity screening, many improvements can be made in terms of calculation efficiency, or in terms of correctness of the molecular description. In the previous chapters, I mostly focused on the gain in efficiency by exploring many adsorption energy sampling techniques and by comparing their computational time  and their accuracy. But I also started to incorporate other properties to the screening procedure by exploring the transport properties for instance. And improve even more the efficiency, I explored alternative calculation strategies besides the more standard ones. 
 
-To overcome the shortcomings of the current adsorption screening methodologies, we need to explore even more material properties. For example, the rigidity of the structures in most of the screening procedures could sometimes mislead toward materials that appear to have a very high selectivity, whereas the flexible nature of the material tend to lower the calculated selectivity. By taking into account flexibility, one could completely change the rankings found by the screening and hence finding other maybe better materials through this new approach. The other property that could completely change the results obtained by current methodologies is the polarization. For adsorbates like xenon and krypton, the difference in polarizability is in fact at the origin of the separability of these gas using an adsorbent material. A better description of this particular property can in fact completely change the results of the screening. If we look at the best experimental materials, they are either decorated with polar groups like in the article~\cite{Li_2019} or they present open metal sites like in the article~\cite{Pei_2022}. However, we do not find these criteria as being essential when looking at the results of the current screenings. 
+To overcome the shortcomings of the current adsorption screening methodologies, we need to give a more accurate physical description of the nanoporous system. For example, the rigidity of the structures in most of the screening procedures could sometimes mislead toward materials that appear to have a very high selectivity, whereas the flexible nature of the material tend to lower the calculated selectivity. By taking into account flexibility, one could completely change the rankings found by the screening and hence finding other maybe better materials through this new approach. The other property that could completely change the results obtained by current methodologies is the polarization. For adsorbates like xenon and krypton, the difference in polarizability is in fact at the origin of the separability of these gas using an adsorbent material. A better description of this particular property can in fact completely change the results of the screening. If we look at the best experimental materials, they are either decorated with polar groups like in the article~\cite{Li_2019} or they present open metal sites like in the article~\cite{Pei_2022}. However, we do not find these criteria as being essential when looking at the results of the current screenings. 
 
 In this final chapter, I want to discuss three main research focuses: (i) the calculation of transport properties that could be further optimized, (ii) the adsorption calculations in flexible frameworks, and (iii) the better description of the polarization in the energy calculations.
 
