--- a/0-intro.tex
+++ b/0-intro.tex
@@ -6,39 +6,26 @@
 
 \todo{Gas separation of xenon/krypton}
 
+% separation in general
 Industrial gas separation processes is widely used to supply purified reactants and inert gases for the chemical, the health, the agricultural and the food industries. It can also be used to mitigate negative environmental impact of some industrial activities: in concrete or steel production factories, the highly problematic \ce{CO2} emissions could be separated from other atmospheric gases and captured; in nuclear treatment plants, volatile radioactive compounds (e.g., $^{85}$Kr) can also be captured through an effective separation. Different small molecules are usually considered in these processes such as nitrogen, oxygen, carbon
 dioxide, noble gases, hydrogen, methane, or nitrous oxide. The xenon/krypton separation is usually performed on atmospheric gases,\autocite{kerry2007industrial} but other more abundant sources of noble gases can be found especially in the nuclear industry.\autocite{Banerjee_2014} 
 
-\todo{Nanoporous materials}
+% nanoporous
+In the industry, Xe/Kr separation is usually based on the cryogenic distillation of liquified atmospheric air, which requires a lot of energy, heavy infrastructures and a thorough hazard management. The hazardousness of the process resonates with the very recent industrial accidents that occured due to the reaction of non-filtered hydrocarbons with purified liquid oxygen.\autocite{distill_accident,distill_accident2} To avoid security problems and to reduce the installation and the running cost of the gas separation process, a promising technology based on the competitive adsorption on a nanoporous material is now being actively researched. Nanoporous materials are constituted by nanoscale pores that offers a large surface area on which molecules can interact and adhere on. Industrial adsorption separation usually utilizes pressure swing adsorptions (PSA) --- the pores are loaded with a given gas mixture at high pressure and then the gas is released by applying a lower pressure. If the material preferentially load one type of molecule, the composition of the released gas would have a much higher content of this molecule, hence achieving a gradual separation. In this thesis, xenon being chemically similar to krypton, the most challenging step of the purification of xenon remains the xenon/krypton separation. For instance, some prototypes involving beds of nanoporous materials have been developed for xenon/krypton separation.\autocite{Banerjee2018} 
 
-In the current state of the separation process
-\todo{cryo}
+% computation
+For the process to be viable, materials need to perform even better and many studies focus on synthesizing ever more selective materials by leveraging all chemical intuitions around noble gas adsorption properties.\autocite{Chen_2014, Li_2019, Pei_2022} In order to speed the discovery process of novel materials with key properties, computational screening can identify factors explaining the performance and pre-select candidates for further experimental studies. As recently conceptualized by Lyu et al., a synergistic workflow combining computational discovery and experimental validation can push material discovery to the next stage.\autocite{Lyu_2020, Jablonka_2022} But to efficiently guide experimental discoveries, computational chemists are facing two major challenges: generating reliably more structures and evaluating them with fast and accurate models.
 
+The number of nanoporous materials is potentially unlimited; for the metal--organic frameworks (MOFs) alone, over 90,000 structures have been synthesized~\autocite{Groom_2016} and 500,000 computationally constructed~\autocite{Wilmer_2012,Boyd_2016,Colon_2017}. To deal with this ever-increasing quantity of structures, researchers are developing screening strategies to efficiently identify the best materials, while building a chemical intuition on the characteristics favorable to a high separation performance. The current screening strategies are usually based on computational tools that are more adapted to single-structure studies rather than high-throughput screenings. Moreover, in the industrial process of PSA introduced earlier and other similar technologies, many variables are required to draw a complete picture of the performance: the selectivity, the working capacity, the kinetics and thermodynamics behind the regeneration of the material (i.e., unloading the pores for another cycle).\autocite{Kumar_1994} This thesis aims at answering both these challenges by designing more efficient tools for high-throughput screening of not only the most studied selectivity performance metric, but also of transport properties and others. 
 
-
-PSA for separation most commonly used: selectivity, working capacity, regenerability (kinetics and energy used to regenerate the material i.e., empty the pores for another cycle).\autocite{Kumar_1994}
-
-\todo{Database/screening}
-
-\todo{Problem framing}
-
-\todo{Proposed studies}
-
-\todo{Just a copy paste from last article}
-
-Gas separation and purification are essential processes since they provide key reactants and inert gases for the chemical industry, as well as medical or food grade gases. Among them, we can find easily extractable or synthesizable molecules such as nitrogen, oxygen, carbon dioxide, noble gases, hydrogen, methane, or nitrous oxide. Moreover, gas separation is crucial in mitigating negative environmental impact at the end of industrial processes, such as facilities emitting green house gases (\emph{e.g.} concrete or steel plants) or treating volatile radioactive wastes like \ex{85}Kr. Cryogenic liquefaction or distillation is currently the mainstream technique to achieve industrial gas separation, while adsorbent beds made of nanoporous materials (activated alumina or zeolites) are mostly used as a less energy-intensive pre-purification system.\autocite{kerry2007industrial}
-
-A wider use of nanoporous materials could reduce the energy consumption of current separation processes since adsorption is way less energy intensive than liquefaction.\autocite{national2019research} For instance, some prototypes involving beds of nanoporous materials have been developed for xenon/krypton separation to avoid employing cryogenic distillation.\autocite{Banerjee2018} For the process to be viable, materials need to perform even better and many studies focus on synthesizing ever more selective materials by leveraging all chemical intuitions around noble gas adsorption properties.\autocite{Chen_2014, Li_2019, Pei_2022} In order to speed the discovery process of novel materials with key properties, computational screening can identify factors explaining the performance and pre-select candidates for further experimental studies. As recently conceptualized by Lyu et al., a synergistic workflow combining computational discovery and experimental validation can push material discovery to the next stage.\autocite{Lyu_2020, Jablonka_2022} But to efficiently guide experimental discoveries, computational chemists are facing two major challenges: generating reliably more structures and evaluating them with fast and accurate models.
-
-The number of nanoporous materials is potentially unlimited; for the metal--organic frameworks (MOFs) alone, over 90,000 structures have been synthesized~\autocite{Groom_2016} and 500,000 computationally constructed~\autocite{Wilmer_2012,Boyd_2016,Colon_2017}. To deal with this ever-increasing amount of structures, we need to design more efficient screening procedures as well as faster performance evaluation tools. To go beyond the time-consuming calculations over the whole dataset, computational chemists developed funnel-like screening procedures to reduce the need for expensive simulations and introduced machine learning (ML) models to replace them with faster evaluation tools.\autocite{Ren_2022} To further improve the selectivity screening for Xe/Kr separation, we will need to design better performing structural and energy-based descriptors.
 
 \begin{center}
     \pgfornament[width=6cm,color=CTsemi]{88}
 \end{center}
 
-This thesis presents my work on the 
+In this manuscript, I will start by a literature review on the screening methodologies that are applied to very different applications of nanoporous materials. It was an opportunity to explore the different techniques that are used in a variety of research fields to inspire the current work.\autocite{Ren_2022} For instance, I proposed another angle to the screening of the separation process by breaking down the selectivity metric into thermodynamic quantities such as the enthalpy, the free energy and the entropy. This study based on time-consuming calculations revealed the effects of pressure, the thermodynamic nature of the selectivity and some structure--property relationships.\autocite{Ren_2021} To further improve the selectivity screening for Xe/Kr separation, I introduced different simulation tools to evaluate the adsorption performance of a nanoporous material.\autocite{Ren_2023} This opened up new opportunities for the development of computationally cheaper and more accurate energy descriptors for the ML prediction of Xe/Kr selectivity at ambient pressure.\autocite{Ren_2023_ml} Through this work, faster and accurate evaluation tools of the Xe/Kr separation have been developed, which potentially enables the improvement of the physical description of the system. 
 
-
+As previously mentioned, the gas capacity of the nanoporous materials and the transport properties inside them are also very important metrics to evaluate the industrial separation process. The gas capacity can be obtained by GCMC calculations, and alternative methodologies were not thoroughly studied in this thesis. The fifth chapter of this thesis rather focuses on the determination of transport properties and alternative methods of evaluating it. Finally, some perspectives on the physical description of the system (flexibility and polarizability) are provided in the final chapter.
 
 
 \vfill
