--- a/0-intro.tex
+++ b/0-intro.tex
@@ -4,19 +4,17 @@
 \chapter*{General introduction}
 \pagenumbering{arabic}
 
-\todo{Gas separation of xenon/krypton}
-
 % separation in general
 Industrial gas separation processes is widely used to supply purified reactants and inert gases for the chemical, the health, the agricultural and the food industries. It can also be used to mitigate negative environmental impact of some industrial activities: in concrete or steel production factories, the highly problematic \ce{CO2} emissions could be separated from other atmospheric gases and captured; in nuclear treatment plants, volatile radioactive compounds (e.g., $^{85}$Kr) can also be captured through an effective separation. Different small molecules are usually considered in these processes such as nitrogen, oxygen, carbon
-dioxide, noble gases, hydrogen, methane, or nitrous oxide. The xenon/krypton separation is usually performed on atmospheric gases,\autocite{kerry2007industrial} but other more abundant sources of noble gases can be found especially in the nuclear industry.\autocite{Banerjee_2014} 
+dioxide, hydrogen, methane, nitrous oxide or the noble gases. The xenon/krypton separation studied in this thesis is usually performed to extract xenon and krypton from the atmosphere,\autocite{kerry2007industrial} but the nuclear industry constitutes a more abundant source of noble gases.\autocite{Banerjee_2014} 
 
 % nanoporous
-In the industry, Xe/Kr separation is usually based on the cryogenic distillation of liquified atmospheric air, which requires a lot of energy, heavy infrastructures and a thorough hazard management. The hazardousness of the process resonates with the very recent industrial accidents that occured due to the reaction of non-filtered hydrocarbons with purified liquid oxygen.\autocite{distill_accident,distill_accident2} To avoid security problems and to reduce the installation and the running cost of the gas separation process, a promising technology based on the competitive adsorption on a nanoporous material is now being actively researched. Nanoporous materials are constituted by nanoscale pores that offers a large surface area on which molecules can interact and adhere on. Industrial adsorption separation usually utilizes pressure swing adsorptions (PSA) --- the pores are loaded with a given gas mixture at high pressure and then the gas is released by applying a lower pressure. If the material preferentially load one type of molecule, the composition of the released gas would have a much higher content of this molecule, hence achieving a gradual separation. In this thesis, xenon being chemically similar to krypton, the most challenging step of the purification of xenon remains the xenon/krypton separation. For instance, some prototypes involving beds of nanoporous materials have been developed for xenon/krypton separation.\autocite{Banerjee2018} 
+In the industry, Xe/Kr separation is usually based on the cryogenic distillation of liquified atmospheric air, which requires a lot of energy, heavy infrastructures and a thorough hazard management. The hazardousness of the process resonates with the recent industrial accidents (1997) that occurred due to the reaction of non-filtered hydrocarbons with purified liquid oxygen.\autocite{distill_accident,distill_accident2} To avoid security problems and to reduce the installation and the running cost of the gas separation process, a promising technology based on the competitive adsorption on a nanoporous material is now being actively researched. Nanoporous materials are constituted by nanoscale pores that offers a large surface area on which molecules can interact and adhere on. Industrial adsorption separation usually utilizes pressure swing adsorptions (PSA) --- the pores are loaded with a given gas mixture at high pressure and then the gas is released by applying a lower pressure. If the material preferentially load one type of molecule, the composition of the released gas would have a much higher content of this molecule, hence achieving a gradual separation. In this thesis, xenon being chemically similar to krypton, the most challenging step of the purification of xenon remains the xenon/krypton separation. For instance, some prototypes involving beds of nanoporous materials have been developed for xenon/krypton separation.\autocite{Banerjee2018} 
 
 % computation
-For the process to be viable, materials need to perform even better and many studies focus on synthesizing ever more selective materials by leveraging all chemical intuitions around noble gas adsorption properties.\autocite{Chen_2014, Li_2019, Pei_2022} In order to speed the discovery process of novel materials with key properties, computational screening can identify factors explaining the performance and pre-select candidates for further experimental studies. As recently conceptualized by Lyu et al., a synergistic workflow combining computational discovery and experimental validation can push material discovery to the next stage.\autocite{Lyu_2020, Jablonka_2022} But to efficiently guide experimental discoveries, computational chemists are facing two major challenges: generating reliably more structures and evaluating them with fast and accurate models.
+For the process to be viable, materials need to perform even better and many studies focus on synthesizing ever more selective materials by leveraging all chemical intuitions around noble gas adsorption properties.\autocite{Chen_2014, Li_2019, Pei_2022} In order to speed the discovery process of novel materials with key properties, computational screening can identify factors explaining the performance and pre-select candidates for further experimental studies. As recently conceptualized by Lyu et al., a synergistic workflow combining computational discovery and experimental validation can push material discovery to the next stage.\autocite{Lyu_2020, Jablonka_2022} But to efficiently guide experimental discoveries, computational chemists are facing two major challenges: generating reliably more structures and evaluating them with fast and accurate models. My work will focus on the second aspect on tool development.
 
-The number of nanoporous materials is potentially unlimited; for the metal--organic frameworks (MOFs) alone, over 90,000 structures have been synthesized~\autocite{Groom_2016} and 500,000 computationally constructed~\autocite{Wilmer_2012,Boyd_2016,Colon_2017}. To deal with this ever-increasing quantity of structures, researchers are developing screening strategies to efficiently identify the best materials, while building a chemical intuition on the characteristics favorable to a high separation performance. The current screening strategies are usually based on computational tools that are more adapted to single-structure studies rather than high-throughput screenings. Moreover, in the industrial process of PSA introduced earlier and other similar technologies, many variables are required to draw a complete picture of the performance: the selectivity, the working capacity, the kinetics and thermodynamics behind the regeneration of the material (i.e., unloading the pores for another cycle).\autocite{Kumar_1994} This thesis aims at answering both these challenges by designing more efficient tools for high-throughput screening of not only the most studied selectivity performance metric, but also of transport properties and others. 
+The number of nanoporous materials is potentially unlimited; for the metal--organic frameworks (MOFs) alone, over 90,000 structures have been synthesized\autocite{Groom_2016} and 500,000 digitally constructed\autocite{Wilmer_2012,Boyd_2016,Colon_2017}. To deal with this ever-increasing quantity of structures, researchers are developing screening strategies to efficiently identify the best materials, while building a chemical intuition on the characteristics favorable to a high separation performance. Some studies focus on a multistep screening strategy,\autocite{Wilmer_2012,Qiao_2016,Yang_2020} while others use machine learning algorithms to speed up their screening procedures.\autocite{Simon_2015} The current screening strategies are usually based on computational tools that are more adapted to single-structure studies rather than high-throughput screenings. Moreover, in the industrial process of PSA introduced earlier and other similar technologies, many variables are required to draw a complete picture of the performance: the selectivity, the working capacity, the kinetics and thermodynamics behind the regeneration of the material (i.e., unloading the pores for another cycle).\autocite{Kumar_1994} This thesis aims at answering both these challenges by designing more efficient tools for high-throughput screening of not only the most studied selectivity performance metric, but also of transport properties and others. 
 
 
 \begin{center}
