--- a/Z-resume-fr.tex
+++ b/Z-resume-fr.tex
@@ -21,8 +21,13 @@
 
 \todo{5 à 10 pages}
 
-Les matériaux poreux sont des matériaux 
+Les procédés industriels de séparation des gaz sont largement utilisés pour fournir des réactifs purifiés et des gaz inertes aux industries chimiques, sanitaires, agricoles et alimentaires pour les industries de la chimie, de la santé, de l'agriculture et de l'alimentation. Ils peuvent également être utilisés pour atténuer l'impact négatif de certaines activités industrielles sur l'environnement : dans les usines de production de béton ou d'acier, les émissions très problématiques de \ce{CO2} pourraient être piégées ; mais aussi dans les usines de retraitement des combustibles nucléaires, des composés radioactifs volatiles peuvent être séparés des autres gaz. Différentes petites molécules comme le diazote, le dioxygène, le dioxyde de carbone, le dihydrogène, le méthane, le protoxyde d'azote ou les gaz rares sont ainsi séparées, purifiées puis stockées. La séparation xénon/krypton étudiée dans cette thèse est communément utilisée pour extraire ces gaz de l'atmosphère,\autocite{kerry2007industrial} mais l'industrie du nucléaire constitue une source bien plus abondante de xénon et de krypton.\autocite{Banerjee_2014}  
 
+Les procédés industriels de séparation Xe/Kr sont encore bien souvent basés sur la distillation cryogénique de l'air ambiant, ce qui requiert beaucoup d'énergie, une infrastructure complexe et un contrôle minutieux des risques. On peut par exemple évoquer les récents accidents d'exploitation d'usine de séparation de gaz (1997) qui ont été causés notamment par la réaction d'hydrocarbures de l'environnement avec l'oxygène liquéfié de l'usine.\autocite{distill_accident,distill_accident2} Pour éviter les problèmes de sécurité et de coûts importants, de nombreux chercheurs s'attèlent à développer des méthodes de séparation industrielle basées sur l'adsorption dans des matériaux nanoporeux. Ces matériaux nanoporeux sont constitués de pores à l'échelle nanoscopique qui offrent une large surface aux molécules pour y interagir puis s'adsorber. Des procédés industriels basés sur cette technologie existent déjà, ils utilisent notamment le \emph{pressure swing adsorption} (PSA) qui consiste à remplir les pores d'un mélange de gaz à haute pression, puis de récupérer un gaz ainsi purifié. En effet, les pores du matériau permettent l'adsorption préférentielle d'une molécule par rapport aux autres ce qui permet d'augmenter la teneur en une certaine molécule du mélange de sortie. En répétant ce procédé, on peut ainsi séparer les différentes molécules d'un gaz. Dans le cadre de ma thèse, le xénon étant chimiquement proche du krypton, la purification par ce procédé reste un défi majeur. Certains prototypes industriels ont déjà été imaginés,\autocite{Banerjee2018} mais la recherche d'un matériau pour effectuer au mieux cette tâche reste aujourd'hui une question ouverte. 
+
+Pour développer un procédé viable, il faut donc choisir avec soin les matériaux que l'on utilise dans ces dispositifs industriels. La recherche se focalise aujourd'hui sur la conception de matériaux toujours plus sélectifs en se basant sur des intuitions chimiques construites au fil des études.\autocite{Chen_2014, Li_2019, Pei_2022} Afin d'éviter les expériences coûteuses pour tester tous les matériaux, les criblages computationnel sont de plus en plus utilisés. Ces criblages ou \emph{screenings} en anglais permettent de passer en revu de grandes quantités de structures afin d'en évaluer leur potentiel performance. Tout l'enjeu est donc de former une bonne synergie entre la conception minutieuse de matériaux et la recherche et évaluation rapide des matériaux via des méthodes informatiques.\autocite{Lyu_2020, Jablonka_2022} Du côté du traitement informatique des matériaux, les deux défis majeurs sont la génération de données fiables et divers afin de couvrir le spectre des possibles et le développement de nouveaux outils pour l'évaluation rapidement et avec précision les performances de ces matériaux. 
+
+La quantité de matériaux est potentiellement infinie, rien que pour les \emph{metal--organic frameworks} (MOFs) en anglais, plus de 90\,000 structures ont été synthétisées\autocite{Groom_2016} et 500\,000 ont été construits de manière digitale.\autocite{Wilmer_2012,Boyd_2016,Colon_2017} Pour pouvoir évaluer tous ces matériaux, différentes stratégies ont été élaborées. Certains utilisent des criblages à plusieurs niveaux qui permettent de réduire au fur et à mesure les matériaux à évaluer avec des méthodes plus coûteuses. D'autres se basent sur des algorithmes d'apprentissage statistiques pour 
 
 \vfill
 \begin{center}
